# lifted-domain-repair

./: .gitignore  00 config.yaml  00-config.yaml  Dockerfile  README.md  Singularity  actions.pkl  batch_solver.py  build_singularity.sh  config.yaml  csv_processor.py  custom_logger.py  debug.py  debug_log.txt  delete.py  delete2.py  domain.pkl  evaluator.py  exp_logs.csv  experiment.py  grounder_comparison.py  heuristic.py  heuristic_notes.tex  instance_ids.json  instance_ids_small_exp_set.json  instance_solver.py  log.txt  log_merger.py  log_reader.py  log_reader.txt  log_table_to_latex.py  log_table_to_latex_maxh.py  log_to_table.py  logging_config.py  main.py  main_nader.py  new_grounder.py  new_heuristic_debug.py  new_main.py  output.sas  (+20 more)
a_star/: __init__.py  astar_algorithm.py  node.py
archive/: evaluator.py  main_pascal_original.py
astar_partial_grounding/: __init__.py  action_grounding_tools.py  astar_algorithm.py  grounder_comparison.py  node.py
containers/: build_singularity.sh  ijcai-nader.def  ijcai-os-python.def  run_container.sh
debug/: debug.py  debug_grounder.py
dev_examples/: cprofile.py
dump/: probBLOCKS-4-0
exp_log_processing/: log_merger.py  log_reader.py  log_table_to_latex.py  log_to_table.py
exp_logs/: 00 analyzer.py
exp_logs_csv/: astar-unary exhaust lp033.csv  astar-unary exhaust lp066.csv  astar-unary exhaust lp1.csv  astar-unary relax-all lp033.csv  astar-unary relax-all lp066.csv  astar-unary relax-all lp1.csv  astar-unary relax-prec lp033.csv  astar-unary relax-prec lp066.csv  (+94 more)
pwl/src/search/: CMakeLists.txt  main.cc  options.h  structures.h
pwl/src/search/datalog/transformations/: normal_form.h
pwl/src/search/search_engines/: initial_adds.h  initial_adds.tpp  initial_h.h  initial_h.tpp  search_factory.cc
relaxation_generator/datalog_transformer/: CMakeLists.txt  common.cpp  common.h  main.cpp  minizinc_printer.cpp  minizinc_printer.h  parser.cpp  parser.h  pretty_print.cpp  pretty_print.h  transformer.cpp  transformer.h
(+58560 files in other folders)
